# Histology-to-microCT-registration

./: .gitignore  CMakeLists.txt  Common.h  HistoToCTRegistrationAlgorithm.cpp  HistoToCTRegistrationAlgorithm.h  HistoToCTRegistrationPlugin.cpp  HistoToCTRegistrationPlugin.h  README.md
model/: model-Torch.yaml  model.pt
